Fix overflowed content

--- a/styles/taiwindcss.scss
+++ b/styles/taiwindcss.scss
@@ -38,6 +38,11 @@
 
     p {
       line-height: 1.5;
+
+      &:has(svg) {
+        overflow-x: auto;
+        max-width: 100%;
+      }
     }
   }
 
